# Ample

./: .gitignore  CMakeLists.txt  README.txt  ample_errors.h  ample_print.c  ampobject.c  ampobject.h  array.h  ast.c  ast.h  bool.h  boolobject.c  boolobject.h  build.bat  build.c  build.sh  dict_int_vars.c  dict_int_vars.h  dict_str_vars.c  dict_str_vars.h  dict_vars.c  dict_vars.h  hash.c  hash.h  interpreter.c  interpreter.h  interpreter_functions.c  interpreter_functions.h  intobject.c  intobject.h  lexer.c  lexer.h  main.c  makefile  mem_debug.c  mem_debug.h  mem_debug_public.h  myqueue.h  ncl.c  ncl.h  (+11 more)
examples/: example1.ample  example2.ample  example3.ample  example4.ample  example5.ample  example6.ample
objects/: ampobject.c  ampobject.h  boolobject.c  boolobject.h  intobject.c  intobject.h  listobject.c  listobject.h  numobject.c  numobject.h  strobject.c  strobject.h
tests/: a.out  array_tests.c  hash_tests.c  interpreter_tests.c  lexer_tests.c  queue_tests.c  stack_tests.c  test.txt
